# Streaming-project

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/database/: limpio.csv
backend/include/core/data/: repository.hpp
backend/include/core/pelicula/application/: peliculaController.hpp
backend/include/core/pelicula/domain/: pelicula.hpp  peliculaService.hpp
backend/include/core/pelicula/infrastructure/: peliculaRepository.hpp
backend/include/core/utils/: responseEntity.hpp
backend/include/data/: repository.hpp
backend/include/pelicula/application/: peliculaController.hpp
backend/include/pelicula/domain/: pelicula.hpp  peliculaService.hpp
backend/include/pelicula/infrastructure/: peliculaRepository.hpp
backend/include/search/engines/pelicula/: PeliculaBasicSearchEngine.hpp
backend/include/search/interface/: searchEngine.hpp
backend/include/search/utils/: searchConfig.hpp
backend/include/utils/: configs.hpp  responseEntity.hpp  singleton.hpp
backend/src/: main.cpp
backend/src/core/data/: repository.tpp
backend/src/core/parallel/: a.cpp  a.h  q.cpp  q.h
backend/src/core/pelicula/: peliculaRepository.cpp  peliculaService.cpp
backend/src/data/: repository.tpp
backend/src/pelicula/: peliculaRepository.cpp  peliculaService.cpp
backend/src/search/engines/pelicula/: PeliculaBasicSearchEngine.cpp
backend/src/search/utils/: searchConfig.cpp
config/: config.json
frontend/: CMakeLists.txt
frontend/include/models/: pelicula.hpp
frontend/include/services/: client.h++  client.hpp
frontend/src/: main.cpp
frontend/src/services/: client.cpp
